--- a/README
+++ b/README
@@ -54,17 +54,22 @@ pear install firephp/FirePHPCore
 
 
 ----------
+** WIKI **
+----------
+Visit the WIKI at http://www.makeabyte.com/agilephp/wiki for details on installation, configuration, and tutorials.
+
+
+----------
 ** TODO **
 ----------
  > Add constructor argument support to InterceptorProxy
- > Iron out RequestScope CSFR issues in regards to destroying session
+ > Iron out RequestScope CSFR issues in regards to destroying session and making requests from client side javascript.
  > Persistence framework needs to support many-to-many relationships
  > Need to revisit PersistenceRenderer and make an easy way to
    allow different client side rendering libraries like jquery, dojo, extjs, etc (adapter?)
  > Add calendar, spinner, date picker, and other widgets to persistence rendering
  > AJAX Push / Comet (PHP socket daemon?)
  > Create dialect classes for the following database servers:
- 	pgsql
 	firebird
 	informix
 	oracle
@@ -72,17 +77,11 @@ pear install firephp/FirePHPCore
 	ibm
  > Finish Form::toJSON method (this should probably use AJAXRenderer)
  > Need to update MSSQLDialect::find to use LIKE clause for text, ntext, and image data types.
- > Need to add support to persistence/Column for multiple foreign keys per column
+ > Need to add support to persistence/Column for multiple foreign keys per column (is this bad database design?)
  > Complete reverse engineering logic in dialect classes and generator/ReverseEngineerDatabase.
  > Add support for database diff's.
- > Add SOAP support for DOCUMENT/LITERAL wrapped
+ > Finish creating unit tests for all framework components (naughty, naughty - TDD!)
  
- --------------------------
- ** Windows Specific TODO's
- --------------------------
- > Use DIRECTORY_SEPARATOR instead of / in references to the file system
- > Use \r\n instead of \n for new lines 
-
 
  --------------------------
  **      Known Bugs      **
