--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,15 +1,11 @@
-0.21a
+0.22a
 -----
 
-- Bug fix to MySQLDialect::reverseEngineer. Typo in $desc->KEY and ->NULL
-- Added Column::setIndex and isIndex methods.
-- Added createTable and dropTable to SQLDialect interface.
-- Bug fix to PersistenceManager::getInstance when passing in a databaseId.
-- Refactored framework to use singleton instance of PersistenceManager instead of creating a new instance.
-- Bug fix to AJAXRenderer::toJSON and toXML methods where method could not be discovered.
-- Renamed PostgreSQLDialect to PGSQLDialect.
-- Bug fix to SQLSRVDialect::find instead of returning null, now returns empty array.
-- Refactored persistence unit tests. Now has one test case (and persistence.xml database) for each supported database engine.
-- Several other various bug fixes in persistence package thanks to new unit tests.
-- Finished up "New Model" wizard in IDE.
-- Lots of other polishing and touchups on IDE
+- Bug fix to Remoting::decode. One too many stripslashes for windows liking.
+- Refactored Remoting::captureErrors ereg to preg_match to fix deprecation warning.
+- Added constructor parameter support to Interception.
+- Refactored the remoting component and client side javascript library - lots of optimizations
+  and now allows callback methods to be set for each remote method call rather than one callback
+  for the whole stub.
+- Windows compatibility refactoring on IDE code thus far.
+- Removed urldecode from RequestScope::sanitize.
