--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,12 @@
-0.23a
-----
+0.24a
+-----
 
-- Added #@AfterInvoke with associated behaviors which now provides POSA2 interceptor before and after hooks.
-- Refactored SessionScope to fix bug which occurred when an object's destructor set a new session variable and
-  SessionScope already persisted.
-- Added #@Stateful interceptor
-- Refactored remoting component to get rid of invokeStateful since now any class can be treated as stateful
-  at code time by the developer with the #@Stateful interceptor.
-- Refactored #@RequestParam interceptor to support 'required' attribute
-- Removed invokeStateful from remoting logic since now any class can be #@Stateful
+- Refactored Upload::save to support optional file name argument.
+- Refactored MySQLDialect::reverseEngineer to add support for foreign keys.
+- Refactored PersistenceManager constructor to support new optional persistence.xml file path argument.
+
+- Lots of new goodies in the IDE
+	Code editor now saves using CTRL+S (in Safari CTRL+SHIFT+S)
+	Added 'refresh' context menu item to file explorer
+	FileExplorer 'Database' context menu items are now functional
+	Deleted FileUtilsRemote
