- Reorg soap classes under webservice.soap. - Reorg remoting classes under webservice.remoting - Renamed all exception classes (got rid of AgilePHP_) and organized them into their respective packages. - Removing build directory from repo and adding svn:ignore property.
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@100 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
-- Refactored FileLogger to change permissions on log file to 0777 when created.
-- checking in rest code that somehow got left out of last checkin
-- cleaned up build.xml to support new project structure
+- Reorg soap classes under webservice.soap.
+- Reorg remoting classes under webservice.remoting
+- Renamed all exception classes (got rid of AgilePHP_) and organized them into their respective packages.
+- Removing build directory from repo and adding svn:ignore property.
