- Bug fix to test/control/RequestParamController.php logger injection - doc updates and more cleanup (removed a few "return null"s, etc) - Bug fix to AJAXRenderer::toXML. Now sets empty arrays as an empty XML element. - Created rest classes responsible for transforming data to domain model's / classes. 	XMLTransformer 	JSONTransformer 	YAMLTransformer (requires PECL yaml package)   also supports transforming to and from different mime types based on annotations,   accept and content-type headers. Client can send data in one format and get it back in   another. Still need to work out aplication/xhtml+xml - xslt? :)
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@104 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/README
+++ b/README
@@ -72,6 +72,15 @@ To have Phing output apidocs, install phpDocumentor via PEAR.
 pear install phpDocumentor XML_Beautifier
 
 
+----------
+** YAML **
+----------
+To get YAML working on PHP 5.3 under ubuntu 10.04:
+
+sudo apt-get install libyaml-0-2 libyaml-dev
+sudo pecl install yaml
+
+
 ---------------------
 **    Debugging    **
 ---------------------
