--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
-- Reorg soap classes under webservice.soap.
-- Reorg remoting classes under webservice.remoting
-- Renamed all exception classes (got rid of AgilePHP_) and organized them into their respective packages.
-- Removing build directory from repo and adding svn:ignore property.
+- Bug fix to test/control/RequestParamController.php logger injection
+- doc updates and more cleanup (removed a few "return null"s, etc)
+- Bug fix to AJAXRenderer::toXML. Now sets empty arrays as an empty XML element.
+- Created rest classes responsible for transforming data to domain model's / classes.
+	XMLTransformer
+	JSONTransformer
+	YAMLTransformer (requires PECL yaml package)
+  also supports transforming to and from different mime types based on annotations,
+  accept and content-type headers. Client can send data in one format and get it back in
+  another. Still need to work out aplication/xhtml+xml - xslt? :)
