- Added stored procedure support to ORM. Added sproc tests to unit tests. - SQLite working again (no sproc or function support) - Created test/agilephp_test_sqlite.sql schema - Deleted test/persistence.xml
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@112 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@
     oracle
     dblib
     ibm
-> Fix mssql and sqlite dialect classes since orm revamp. Trash MSSQLDialect and rename SQLSRVDialect to MSSQLDialect.
+> Fix mssql dialect class since orm revamp.
 > Finish unit tests in ORM package
 > Finish Form::toJSON method (this should probably use AJAXRenderer)
 > Finish creating unit tests for all framework components (naughty, naughty - TDD!)
