--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,15 @@
-- Added stored procedure support to ORM. Added sproc tests to unit tests.
-- SQLite working again (no sproc or function support)
-- Created test/agilephp_test_sqlite.sql schema
-- Deleted test/persistence.xml
+- Created agilephp_test_mssql.sql
+- Added AgilePHP::setDefaultTimezone to test/phpunit/bootstrap.php
+- Added MSSQLDialect (formerly SQLSRVDialect)
+- Dropped support for MSSQL access via PDO MSSQL or PDO ODBC
+- Added MSSQL stored procedure support to ORM
+- Moved SQLDialect require_once to ORM from ORMFactory
+- Added test/phpunit/MSSQLTest which will require being on windows to execute.
+
+C:\Inetpub\wwwroot\AgilePHP>phpunit --bootstrap test\phpunit\bootstrap.php test\
+phpunit\orm\MSSQLTest.php
+PHPUnit 3.4.9 by Sebastian Bergmann.
+
+........
+
+Time: 7 seconds, Memory: 7.75Mb
