- Refactored Identity package. Now allows for custom IdentityManager, email tasks, and authenticators.   Identity agilephp.xml configuration element and attributes are now optional - Refactored ORMFactory::loadDialect to ORMFactory::load - Comment fix to Remoting class. - Began aligning code with PEAR coding standards. - Created SessionProvider and abstracted persistence operations from the SessionScope component. Now   custom SessionProvider implementations can be created and configured using agilephp.xml. Identity   package re-integrated with SessionScope component. - Bug fix to ApplicationScope::destroy resulted in error if temp file has already been deleted - Created Mailer component - Removed FirePHP from build target since its not being used. Updated README and TODO
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@123 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
-- Bug fix to Studio editor-code.phtml view in regards to RemotingException handling
-- Cleanup on studio templates
-- Bug fix to Log class. level was being read before it was set by getLogger
-- Cleanup to AgilePHP.js remoting object around new WebSocket transport
-- Cleaned up generated CSS file by studio. Removed line-height references.
-- Added support to #@BasicAuthenticator::authenticator to allow specifying static authenticator
+- Refactored Identity package. Now allows for custom IdentityManager, email tasks, and authenticators.
+  Identity agilephp.xml configuration element and attributes are now optional
+- Refactored ORMFactory::loadDialect to ORMFactory::load
+- Comment fix to Remoting class.
+- Began aligning code with PEAR coding standards.
+- Created SessionProvider and abstracted persistence operations from the SessionScope component. Now
+  custom SessionProvider implementations can be created and configured using agilephp.xml. Identity
+  package re-integrated with SessionScope component.
+- Bug fix to ApplicationScope::destroy resulted in error if temp file has already been deleted
+- Created Mailer component
+- Removed FirePHP from build target since its not being used. Updated README and TODO
