--- a/TODO
+++ b/TODO
@@ -6,7 +6,8 @@
 > Need to revisit ORM renderer and make an easy way to
       allow different client side rendering libraries like jquery, dojo, extjs, etc (adapter?)
 > Add calendar, spinner, date picker, and other widgets to ORM rendering
-> Create Oracle dialect class
+> Create Oracle dialect class for ORM package
+> Create LDAPDialect class for ORM package
 > Finish Form::toJSON method (this should probably use AJAXRenderer)
 > Finish creating unit tests for all framework components (naughty, naughty - TDD!)
 > Create ActiveDirectoryAuthenticator, OpenLdapAuthenticator, OpenIdAuthenticator to Identity package
@@ -18,3 +19,4 @@
 > Integrate PHPUnit and Bamboo
 > Integrate PHPUnit and Clover
 > Add HTML and attachments to Mailer component
+> Complete OpenAppstore/component integration
